# i3diashow

./: .gitignore  CMakeLists.txt  diashow.cpp  diashow.h  main.cpp  test_pictures.cpp
inc/: daemon.h  diashow.h  pictures.h
src/: daemon.c  diashow.cpp  main.cpp  pictures.cpp
